syntax="proto3"; 
package auth.v1;
option go_package="threads/pkg/gen/auth/v1";



service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}   
message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string token = 1;
}
message LogoutResponse {
  bool success = 1;
}

message LogoutAllRequest {
  string user_id = 1;
}
message LogoutAllResponse {
  bool success = 1;
}